kubernetes/apps/librenms/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librenms-https-route
  namespace: librenms
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: librenms.png
    gethomepage.dev/name: LibreNMS
    gethomepage.dev/group: Monitoring
    gethomepage.dev/description: "Network monitoring"
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - librenms.as62430.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: librenms
      port: 8000
---
# HTTPRoute pour HTTP (redirection 301)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librenms-http-redirect
  namespace: librenms
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - librenms.as62430.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
